--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,2 @@
-<resources>
-    <string name="app_name">Bike Marauder\'s Map</string>
+<resources>    <string name="app_name">Bike Marauder\'s Map</string>
 </resources>
